# BTC_Anrdoid_Miner

./: .gitignore  README.md  build.gradle.kts  crash-log.txt  gradlew  gradlew.bat  main-log.txt  settings.gradle.kts
.github/workflows/: codeql.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/cgminer/arm64-v8a/: README.txt
app/src/main/assets/cgminer/armeabi-v7a/: README.txt
app/src/main/cpp/: CMakeLists.txt  NOTICE  SECURITY.md  _t_mid0.c  btc_header_sha256.c  btc_header_sha256.h  embed_spv.cmake  miner.c  miner.comp  sha256.c  sha256.h  sha256_arm_sha2.c  sha256_arm_sha2.h  sha256_neon_4way.c  sha256_neon_4way.h  sha256_scan.c  sha256_scan.h  vulkan_miner.c
app/src/main/kotlin/com/btcminer/android/: AppLog.kt  ChartBestDifficultyFragment.kt  ChartHashrateFragment.kt  ChartMandelbrotFragment.kt  ChartPagerAdapter.kt  ChartSharesDonutFragment.kt  DashboardStatsPage1Fragment.kt  DashboardStatsPage2Fragment.kt  DashboardStatsPage3Fragment.kt  DashboardStatsPage4Fragment.kt  DashboardStatsPage5Fragment.kt  MainActivity.kt  MainPagerAdapter.kt  SharesDonutCenterLabelHelper.kt  SharesDonutRimLabelHelper.kt
app/src/main/kotlin/com/btcminer/android/config/: ConfigActivity.kt  CpuSha256Flavor.kt  CpuShaCapabilities.kt  GpuSha256Mode.kt  MiningConfig.kt  MiningConfigRepository.kt  SecureConfigStorage.kt
app/src/main/kotlin/com/btcminer/android/debug/: DebugMiningSession.kt
app/src/main/kotlin/com/btcminer/android/mining/: AlarmWakeReceiver.kt  CgminerBinary.kt  MiningConstants.kt  MiningConstraints.kt  MiningEngine.kt  MiningForegroundService.kt  MiningStatsRepository.kt  NativeMiner.kt  NativeMiningEngine.kt  PendingSharesRepository.kt  ProcessMiningEngine.kt  StratumClient.kt  StratumHeaderBuilder.kt  StratumJob.kt  StratumOutboundSubmitSource.kt  StubMiningEngine.kt  ThrottleState.kt
app/src/main/kotlin/com/btcminer/android/network/: CertPins.kt  StratumPinCapture.kt
app/src/main/kotlin/com/btcminer/android/util/: BitcoinAddressValidator.kt  FractalPlotKind.kt  MandelbrotEscapeRenderer.kt  NumberFormatUtils.kt  StratumJsonUiFormatter.kt
app/src/main/res/drawable/: ic_mining_notification.xml  ic_stratum_wifi.xml  tab_dashboard_dot.xml  tab_dashboard_dot_selected.xml  tab_dashboard_dot_unselected.xml
app/src/main/res/layout/: activity_config.xml  activity_main.xml  fragment_chart_best_difficulty.xml  fragment_chart_hashrate.xml  fragment_chart_mandelbrot.xml  fragment_chart_shares_donut.xml  fragment_dashboard_page1.xml  fragment_dashboard_page2.xml  fragment_dashboard_page4.xml  fragment_dashboard_page5.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/kotlin/com/btcminer/android/mining/: StratumHeaderBuilderGoldenTest.kt
docs/: cgminer-build.md
fake_stratum/: README.md  fake_stratum.py
scripts/: verify_cert_pins.sh
